# zero2rust

./: .env  Cargo.toml  Dockerfile  _Dockerfile  configuration.yaml  spec.yaml
configuration/: base.yaml
migrations/: 20231221114804_create_subscriptions_table.sql  20240106101739_make_status_not_null_in_subscription.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscription.rs  subscription_confirm.rs
