[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "4.4.0"
config = "0.13.4"
serde = { version = "1.0.193", features = ["derive"] }
tokio = "1.35.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.31"

[dev-dependencies]
reqwest = "0.11.23"
