[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "4.4.0"
config = "0.13.4"
serde = { version = "1.0.193", features = ["derive"] }
tokio = "1.35.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.31"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.9"
serde-aux = "4.3.1"
unicode-segmentation = "1.10.1"
claim = "0.5.0"
validator = "0.16.1"

[dev-dependencies]
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
reqwest = "0.11.23"
